--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <div class="container">
-    <table id="table_students">
+    <div id="table_students">
 
-    </table>
+    </div>
 </div>
 <script src="jquery-3.2.1.min.js"></script>
 <script src="app.js"></script>
