--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div id="table_students">
 
     </div>
+    <button id="add-row">Add</button>
+    <button id="remove-row">Remove</button>
 </div>
 <script src="jquery-3.2.1.min.js"></script>
 <script src="app.js"></script>
